helpmenu fix - disable z-index on side view

--- a/frontend/src/App.sass
+++ b/frontend/src/App.sass
@@ -25,7 +25,7 @@
       left: 0
 
   #side-view
-    z-index: 20
+    //z-index: 20
     position: absolute
     outline: $border-width solid #a9a9a9
     width: 40%
